--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,5 @@
 @import 'assets/scss/abstracts/variables';
 @import 'assets/scss/base/reset';
 @import 'assets/scss/base/fonts';
+@import 'assets/scss/base/typography';
+@import 'assets/scss/base/buttons';
