--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -2,18 +2,22 @@
 *   --- Colores ---
 */
 
-
 $primary: #5B17AA;
-$gray2:   #2F3232;
-$gray1:   #6B6B6B;
+
+$gray5:   #F4F4F4;
+$gray4:   #2F3232;
+$gray3:   #6B6B6B;
+$gray2:   #606060;
+$gray1:   #E6E6E6;
 $gray0:   #EEE;
+
 $black:   #000;
 $white:   #FFF;
+
 
 /*
 *   --- Variables ---
 */
-
 
 $helve-r: 'HelveticaNeueRegular';
 $helve-m: 'HelveticaNeueMedium';
