--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -2,26 +2,31 @@
 h1 {
     font-family: $helve-b;
     font-size: 3.5rem;
+    margin: 0;
 }
 
 h2 {
     font-family: $helve-b;
     font-size: 2.75rem;
+    margin: 0;
 }
 
 h3 {
     font-family: $helve-b;
     font-size: 2rem;
+    margin: 0;
 }
 
 h4 {
     font-family: $helve-m;
     font-size: 1.625rem;
+    margin: 0;
 }
 
 h5 {
     font-family: $helve-r;
     font-size: 1.25rem;
+    margin: 0;
 }
 
 p,
