Component form search - header into product detail

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -8,7 +8,7 @@
         <div class="header-list">
             <ul class="header-list__options">
                 <li>
-                    <!-- Componente de busqueda TODO -->
+                    <app-form-search></app-form-search>
                 </li>
                 <li>
                     <a href="" class="btn-shopping">
