--- a/src/assets/scss/base/_buttons.scss
+++ b/src/assets/scss/base/_buttons.scss
@@ -8,6 +8,7 @@
         color: $white;
         font-family: $robo-r;
         font-size: 19px;
+        padding: 10px 20px 11px;
     }
     &.btn-outline-secondary {
         background-color: $white;
