--- a/src/app/components/pages/products/product-list/product-list.component.html
+++ b/src/app/components/pages/products/product-list/product-list.component.html
@@ -1,2 +1,10 @@
 <app-header></app-header>
-<p>product-list works!</p>
+<section id="productList">
+    <div class="container">
+        <div class="product-list">
+            <h3 class="title">RESULTADOS DE BUSQUEDA</h3>
+
+            
+        </div>
+    </div>
+</section>
